[package]
name = "awvp"
version = "0.1.0"
authors = ["Sgeo <sgeoster@gmail.com>"]
build = "build.rs"

[dependencies]
lazy_static = "0.2.1"
log = "0.3.6"
flexi_logger = "0.5.0"

[dependencies.log-panics]
version = "1.0.0"
features = ["with-backtrace"]

[lib]
name = "aw"
crate-type = ["cdylib"]

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'